CHANGES
=======

UPDATE: Update Django to 1.11.21 due to security vulnerability

2.8.0

UPDATE: Add pylint to travis
UPDATE: Remove empty lines in dockerfile (will be forbidden in future verions of docker)
UPDATE: Orion indexes creation logic aligned with last changes in Orion documentation

2.7.0

UPDATE: Update Djangorestframework to 3.9.4 due to security vulnerability
Add STH mongodb indexes to optimize queries on its collections (#192)
Add TLS option to mailer configuration

2.6.0

ADD: PostGIS cygnus iotmodule
ADD: Allow subservices names with '-'
ADD: anon passwords in debug logs
ADD: extra check for getUserDetailsByAdmin to create response

2.5.0

ADD: Increate subservice name limit to 64
ADD: Allow subservices names with ':' and '.'

2.4.0

FIX: startup orchestrator is not executed (#190)
UPDATE: Update Django to 1.11.20 due to security vulnerability (#186)
UPDATE: Update python deps:
          httplib2 to 0.12.0
          simplejson to 3.16.0
          uwsgi to 2.0.17.1
          requests 2.21.0
          pymongo to 3.7.2

2.3.0

ADD: multilevel support allowing subservices with '/'
UPDATE: Django to 1.11.18 (and djangorestframweork to 3.9.0) due to security vulnerability (#39)
FIX: show PEP_PERSEO conf at startup
FIX: add docker arg to set debug level option (#98)

2.2.0

FIX: add docker arg to set multiagent cygnus option (#175)
FIX: add docker arg to set default pwd for pep and iotagent (#171)
FIX: execute orchestrator command into docker container (#167)

2.1.1

FIX: max-requests uswgi option fixed from 5000 to 1000

2.1.0

FEATURE: add harakiri and max-requests options to uwsgi
FEATURE: upgrade some python dependences:
        - uwsgi to 2.0.17
        - httplib2 to 0.11.3
        - simplejson to 3.15.0
        - jsonschema to 2.6.0
        - request to 2.12.5
        - djangorestframework to 3.1.3
FIX: increase number of uwsgi processes from 2 to 6

2.0.1

FIX: check ldap port before cast to int

2.0.0
